--- a/Readings/Panel.org
+++ b/Readings/Panel.org
@@ -15,7 +15,7 @@
 #+PROPERTY: YEAR
 #+PROPERTY: COUNTRY
 
-
+[[file:../../Org/notes/20210210091646-chpanel.org][ChPanel]]
 
 * [#A] Survey 
   :PROPERTIES:
